crates/ruff/tests/cli/snapshots/cli__lint__odoo_xml_code_fields.snap
---
source: crates/ruff/tests/cli/lint.rs
info:
  program: ruff
  args:
    - check
    - "--no-cache"
    - "--output-format"
    - concise
    - "--isolated"
    - "--select"
    - "F821,E1"
    - my_module/data/ir_cron.xml
---
success: false
exit_code: 1
----- stdout -----
my_module/data/ir_cron.xml:7:34: F821 Undefined name `undefined_name`
my_module/data/ir_cron.xml:14:1: invalid-syntax: Unexpected indentation
my_module/data/ir_cron.xml:25:28: F821 Undefined name `missing_model`
Found 3 errors.

----- stderr -----
