crates/ruff/tests/cli/snapshots/cli__lint__odoo_xml_files_are_not_discovered_by_default.snap
---
source: crates/ruff/tests/cli/lint.rs
info:
  program: ruff
  args:
    - check
    - "--no-cache"
    - "--output-format"
    - concise
    - "--isolated"
    - "--select"
    - F821
    - "."
---
success: false
exit_code: 1
----- stdout -----
my_module/models.py:1:1: F821 Undefined name `undefined_name`
Found 1 error.

----- stderr -----
